Review fixes for jaxrs-2.0:jaxrs-2.0-wildfly-testing
Automated code review of instrumentation/jaxrs/jaxrs-2.0/jaxrs-2.0-wildfly-testing.